processed/gerrit/txt_full/33346.txt
Change:     33346
Subject:    LU-11393 osd-zfs: time struct changes
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/33346
Change-Id:  I5c2373d053ea92d8bf04befe1d096159b8a34126
Project:    fs/lustre-release
Branch:     b2_10
Status:     ABANDONED
Owner:      Nathaniel Clark
Created:    2018-10-10 17:11:22.000000000
Updated:    2022-04-28 21:47:40.000000000
Patch Set:  4
Insertions: +27
Deletions:  -10
Comments:   2 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Andreas Dilger, Alex Zhuravlev, Nathaniel Clark, Tony Hutter

--- Commit Message ---
LU-11393 osd-zfs: time struct changes

Account for changes in 0.7.10 and pre 0.8 changes in ZFS that change
the time structure.

Lustre-commit: 8546f17bb7c85958263cb12f7628678fb97837e1
Lustre-change: https://review.whamcloud.com/33345

Test-Parameters: trivial
Signed-off-by: Nathaniel Clark <nclark@whamcloud.com>
Change-Id: I5c2373d053ea92d8bf04befe1d096159b8a34126
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Tony Hutter <hutter2@llnl.gov>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>

--- Review History ---

--- Message (Nathaniel Clark, 2018-10-10 17:11:22.000000000) ---
Uploaded patch set 1.

--- Message (Alex Zhuravlev, 2018-10-10 17:14:06.000000000) ---
Patch Set 1:

(1 comment)

--- Message (Nathaniel Clark, 2018-10-10 17:15:10.000000000) ---
Patch Set 1:

(1 comment)

--- Message (wc-checkpatch, 2018-10-10 17:16:06.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Nathaniel Clark, 2018-10-10 17:17:18.000000000) ---
Uploaded patch set 2.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-10-10 17:18:27.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

  In file included from /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_handler.c:53:0:
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h: In function ‘osd_index_register’:
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:928:2: error: implicit declaration of function ‘lustre_index_register’ [-Werror=implicit-function-declaration]
   return lustre_index_register(&osd->od_dt_dev, osd_name(osd),
   ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:929:14: error: ‘struct osd_device’ has no member named ‘od_index_backup_list’
           &osd->od_index_backup_list, &osd->od_lock,
               ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:929:42: error: ‘struct osd_device’ has no member named ‘od_lock’
           &osd->od_index_backup_list, &osd->od_lock,
                                           ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:930:14: error: ‘struct osd_device’ has no member named ‘od_index_backup_stop’
           &osd->od_index_backup_stop,
               ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h: In function ‘osd_index_backup’:
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:940:24: error: ‘INDEX_BACKUP_OID’ undeclared (first use in this function)
   lu_local_obj_fid(fid, INDEX_BACKUP_OID);
                         ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:940:24: note: each undeclared identifier is reported only once for each function it appears in
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:941:2: error: implicit declaration of function ‘osd_idc_find_and_init_with_oid’ [-Werror=implicit-function-declaration]
   rc = osd_idc_find_and_init_with_oid(env, osd, fid,
   ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:942:13: error: ‘struct osd_device’ has no member named ‘od_index_backup_id’
           osd->od_index_backup_id);
              ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:946:2: error: implicit declaration of function ‘lustre_index_backup’ [-Werror=implicit-function-declaration]
   lustre_index_backup(env, &osd->od_dt_dev, osd_name(osd),
   ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:947:12: error: ‘struct osd_device’ has no member named ‘od_index_backup_list’
         &osd->od_index_backup_list, &osd->od_lock,
             ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:947:40: error: ‘struct osd_device’ has no member named ‘od_lock’
         &osd->od_index_backup_list, &osd->od_lock,
                                         ^
 /home/green/smt/git/lustre-release/lustre/osd-zfs/osd_internal.h:948:12: error: ‘struct osd_device’ has no member named ‘od_index_backup_stop’
         &osd->od_index_backup_stop, backup);
             ^

--- Message (Alex Zhuravlev, 2018-10-10 17:19:23.000000000) ---
Patch Set 2: Code-Review+1

--- Message (wc-checkpatch, 2018-10-10 17:21:16.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-10-10 17:34:09.000000000) ---
Patch Set 2:

Code-wise looks good to me.

--- Message (Jenkins, 2018-10-10 17:41:50.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/1061/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/59083/ : FAILURE

--- Message (Jenkins, 2018-10-10 17:56:47.000000000) ---
Patch Set 2: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/1062/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/59084/ : SUCCESS

--- Message (Autotest, 2018-10-10 17:57:25.000000000) ---
Patch Set 2:

Onyx Autotest started enforced review-ldiskfs session. The following test requirements were specified: trivial=true

--- Message (Maloo, 2018-10-10 20:03:50.000000000) ---
Patch Set 2: Verified+1

Passed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by Onyx Autotest from onyx-39vm6: https://testing.whamcloud.com/test_sessions/b4705b0a-3bfb-477d-b58d-c8cfca3acc21 ran 4 tests.

--- Message (Nathaniel Clark, 2018-10-10 21:19:03.000000000) ---
Uploaded patch set 3.

--- Message (wc-checkpatch, 2018-10-10 21:20:32.000000000) ---
Patch Set 3:

Looks good to me.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-10-10 21:35:41.000000000) ---
Patch Set 3:

Code-wise looks good to me.

--- Message (Jenkins, 2018-10-10 22:01:12.000000000) ---
Patch Set 3: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/1081/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/59114/ : SUCCESS

--- Message (Autotest, 2018-10-10 22:01:22.000000000) ---
Patch Set 3:

Trevis Autotest2 started enforced review-ldiskfs session. The following test requirements were specified: trivial=true

--- Message (Maloo, 2018-10-11 00:09:13.000000000) ---
Patch Set 3: Verified+1

Passed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by Trevis Autotest2 from trevis-39vm6: https://testing.whamcloud.com/test_sessions/ad5d7fb8-fbc8-4d2b-a057-75936f1d3116 ran 4 tests.

--- Message (Alex Zhuravlev, 2018-10-11 04:53:03.000000000) ---
Patch Set 3: Code-Review+1

--- Message (Tony Hutter, 2018-11-01 20:29:43.000000000) ---
Patch Set 3: Code-Review+1

--- Message (Nathaniel Clark, 2018-11-07 13:05:07.000000000) ---
Uploaded patch set 4.

--- Message (wc-checkpatch, 2018-11-07 13:09:22.000000000) ---
Patch Set 4:

Looks good to me.

--- Message (Jenkins, 2018-11-07 13:40:17.000000000) ---
Patch Set 4: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews-patchless/1676/ : SUCCESS

https://build.whamcloud.com/job/lustre-reviews/59821/ : SUCCESS

--- Message (Autotest, 2018-11-07 13:40:27.000000000) ---
Patch Set 4:

AT Release Candidate started enforced review-ldiskfs session. The following test requirements were specified: trivial=true

--- Message (Maloo, 2018-11-07 15:48:55.000000000) ---
Patch Set 4: Verified+1

Passed enforced test review-ldiskfs on CentOS 7.0/x86_64 uploaded by AT Release Candidate from trevis-66vm1: https://testing.whamcloud.com/test_sessions/93e1c154-4385-49a3-8548-7e1cfd5ea0d6 ran 4 tests.

--- Message (Andreas Dilger, 2018-11-08 20:45:01.000000000) ---
Patch Set 4: Code-Review+1

--- Message (Alex Zhuravlev, 2018-11-21 06:39:47.000000000) ---
Patch Set 4: Code-Review+1

--- Message (Andreas Dilger, 2022-04-28 21:47:40.000000000) ---
Abandoned

Abandon old patches on b2_10.
